redo the signIn across d pages, redo the edit section correction and removed the setting icon, also aligned d icon

--- a/css/editprofile.css
+++ b/css/editprofile.css
@@ -27,7 +27,6 @@ body {
   min-height: 100vh;
   background-color: #ffffff;
   border-right: 0.5px solid #b4b1af;
-  
 }
 
 .sidebar-container .logo {
@@ -92,7 +91,11 @@ body {
 .sidebar-lists li:hover .dropdown-menu {
   display: block;
   margin: 1rem;
+  padding-bottom: 10px;
 }
+
+
+
 
 button {
   display: block;
@@ -111,23 +114,21 @@ button {
 }
 
 .btn-logout {
-  position:absolute;
-  bottom: 15%;
+  position: absolute;
+  bottom: 11%;
 }
 
 /* ADENIGBA CSS STARTS HERE */
 
-.usersEditSection{
-    width: 700px;
-    margin: 0 auto;
+.usersEditSection {
+  width: 700px;
+  margin: 0 auto;
 }
-
 
 .editSectionTitle {
   margin-top: 40px;
   margin-bottom: 40px;
 }
-
 
 .formTitle {
   font-size: 20px;
@@ -144,18 +145,17 @@ button {
   margin-bottom: 20px;
 }
 
-
 .formGroup Input {
-  border: none;
+  border: 1px solid red;
   height: 55px;
   border-radius: 5px;
   margin-bottom: 20px;
   width: 100%;
   padding: 15px;
   font-size: 15px;
-  outline:none;
-  background: #B4B1AF;;
-  opacity: 90%;
+  outline: none;
+  /* background: #B4B1AF;; */
+  /* opacity: 90%; */
 }
 
 .icon {
@@ -163,7 +163,7 @@ button {
   right: 15px;
   top: 0;
   font-size: 20px;
-  height: 100%;
+  height: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,12 +175,12 @@ button {
   gap: 15px;
 }
 
-.buttonContainer a{
+.buttonContainer a {
   text-decoration: none;
   text-align: center;
 }
 
-button{
+button {
   height: 50px;
   font-weight: 700;
 }
@@ -197,7 +197,7 @@ button{
 }
 
 .active {
-  background:  #ED4D02;
+  background: #ed4d02;
   color: #fff;
 }
 
