--- a/css/sign-up-page.css
+++ b/css/sign-up-page.css
@@ -238,7 +238,7 @@ input::placeholder{
 
 .login a{
   text-decoration: none;
-  color: #000000;
+  color: #ed4d02;
 }
 
 .signup-container a {
